Change source to resource, add severityCode and lastReceiveId

--- a/etc/httpd-alerta.conf
+++ b/etc/httpd-alerta.conf
@@ -4,7 +4,7 @@ ServerName monitoring.gudev.gnl
 # ServerName devmonsvr01.gudev.gnl
 ServerAdmin webmon@guardian.co.uk
 #
-# Alerter API
+# Alerta API
 #
 
 DocumentRoot /var/www/html
