Add alerta mgmt status metrics

--- a/etc/httpd-alerta.conf
+++ b/etc/httpd-alerta.conf
@@ -1,7 +1,6 @@
 <VirtualHost *:80>
 
 ServerName monitoring.gudev.gnl
-# ServerName devmonsvr01.gudev.gnl
 ServerAdmin webmon@guardian.co.uk
 #
 # Alerta API
@@ -13,6 +12,7 @@ RewriteEngine On
 RewriteRule ^/alerta/api/v1/alerts/alert.json$ /alerta/api/v1/alert-api.py?%{QUERY_STRING} [L]
 RewriteRule ^/alerta/api/v1/alerts/alert/(.*)$ /alerta/api/v1/alert-dbapi.py?id=$1 [L]
 RewriteRule ^/alerta/api/v1/alerts$ /alerta/api/v1/alert-dbapi.py?%{QUERY_STRING} [L]
+RewriteRule ^/alerta/management /alerta/api/v1/alert-mgmt.py [L]
 
 ErrorLog logs/alerta-error.log
 CustomLog logs/alerta-access.log common
