--- a/etc/httpd-alerta.conf
+++ b/etc/httpd-alerta.conf
@@ -10,7 +10,7 @@ DocumentRoot /var/www/html
 
 RewriteEngine On
 RewriteRule ^/alerta/api/v1/alerts/alert.json$ /alerta/api/v1/alert-api.py?%{QUERY_STRING} [L]
-RewriteRule ^/alerta/api/v1/alerts/alert/(.*)$ /alerta/api/v1/alert-dbapi.py?id=$1 [L]
+RewriteRule ^/alerta/api/v1/alerts/alert/(.*)$ /alerta/api/v1/alert-dbapi.py?_id=$1 [L]
 RewriteRule ^/alerta/api/v1/alerts$ /alerta/api/v1/alert-dbapi.py?%{QUERY_STRING} [L]
 RewriteRule ^/alerta/management /alerta/api/v1/alert-mgmt.py [L]
 
