Alert API now uses canonical id instead of lastReceiveId

--- a/etc/httpd-alerta.conf
+++ b/etc/httpd-alerta.conf
@@ -1,26 +1,24 @@
 <VirtualHost *:80>
 
-ServerName monitoring.gudev.gnl
-ServerAdmin webmon@guardian.co.uk
-#
-# Alerta API
-#
+	ServerName monitoring.gudev.gnl
+	ServerAlias monitoring.guprod.gnl
+	ServerAdmin webmon@guardian.co.uk
 
-DocumentRoot /var/www/html
+	RewriteEngine On
+	RewriteRule ^/alerta/api/v1/alerts/alert.json$ /alerta/api/v1/alert-api.py?%{QUERY_STRING} [L]
+	RewriteRule ^/alerta/api/v1/alerts/alert/(.*)$ /alerta/api/v1/alert-dbapi.py?id=$1 [L]
+	RewriteRule ^/alerta/api/v1/alerts$ /alerta/api/v1/alert-dbapi.py?%{QUERY_STRING} [L]
+	RewriteRule ^/alerta/management /alerta/api/v1/alert-mgmt.py [L]
 
-RewriteEngine On
-RewriteRule ^/alerta/api/v1/alerts/alert.json$ /alerta/api/v1/alert-api.py?%{QUERY_STRING} [L]
-RewriteRule ^/alerta/api/v1/alerts/alert/(.*)$ /alerta/api/v1/alert-dbapi.py?_id=$1 [L]
-RewriteRule ^/alerta/api/v1/alerts$ /alerta/api/v1/alert-dbapi.py?%{QUERY_STRING} [L]
-RewriteRule ^/alerta/management /alerta/api/v1/alert-mgmt.py [L]
+	DocumentRoot /var/www/html
+	ErrorLog logs/alerta-error.log
+	CustomLog logs/alerta-access.log common
 
-ErrorLog logs/alerta-error.log
-CustomLog logs/alerta-access.log common
-
-<Directory "/var/www/html/alerta/api">
-    Options FollowSymLinks
-    Options +ExecCGI
-    AddHandler cgi-script .py
-</Directory>
+	<Directory "/var/www/html/alerta/api">
+		Options FollowSymLinks
+		Options +ExecCGI
+		AddHandler cgi-script .py
+	</Directory>
 
 </VirtualHost>
+
