Update apache rewrite config

--- a/etc/httpd-alerta.conf
+++ b/etc/httpd-alerta.conf
@@ -6,8 +6,7 @@
 
 	RewriteEngine On
 	RewriteRule ^/alerta/api/v1/alerts/alert.json$ /alerta/api/v1/alert-api.py?%{QUERY_STRING} [L]
-	RewriteRule ^/alerta/api/v1/alerts/alert/(.*)$ /alerta/api/v1/alert-dbapi.py?id=$1 [L]
-	RewriteRule ^/alerta/api/v1/alerts$ /alerta/api/v1/alert-dbapi.py?%{QUERY_STRING} [L]
+	RewriteRule ^/alerta/api/v1 /alerta/api/v1/alert-dbapi.py [L]
 	RewriteRule ^/alerta/management /alerta/api/v1/alert-mgmt.py [L]
 
 	DocumentRoot /var/www/html
