--- a/conf/alerta.yaml
+++ b/conf/alerta.yaml
@@ -1,6 +1,6 @@
 # Assign a service to EC2 alerts based on cluster tag
 - match:
-    service: EC2
+    service: [ EC2 ]
   parser: Ec2ServiceLookup
 
 # Assign a service to RiffRaff alerts based on resource
