Add apache rewrite rule for resource API request

--- a/etc/httpd-alerta.conf
+++ b/etc/httpd-alerta.conf
@@ -7,6 +7,7 @@
 	RewriteEngine On
 	RewriteRule ^/alerta/api/v1/alerts/alert.json$ /alerta/api/v1/alert-api.py?%{QUERY_STRING} [L]
 	RewriteRule ^/alerta/api/v1/alerts /alerta/api/v1/alert-dbapi.py [L]
+	RewriteRule ^/alerta/api/v1/resources /alerta/api/v1/alert-dbapi.py [L]
 	RewriteRule ^/alerta/management /alerta/api/v1/alert-mgmt.py [L]
 
 	DocumentRoot /var/www/html
