--- a/etc/alerta/alerta.conf.sample
+++ b/etc/alerta/alerta.conf.sample
@@ -1,92 +1,42 @@
 [DEFAULT]
-# STOMP messaging
-stomp_host=localhost
-stomp_port=61613
-stomp_queue=/queue/alerts
+debug = False
+foreground = False
+timezone = Europe/London
+use_stderr = True
+use_syslog = False
+verbose = False
+log_dir = /var/log/alerta
 
+server_threads = 4
 
+alert_timeout = 86400
 
-# AMQP exchange to connect to if using RabbitMQ or Qpid
-# (string value)j
-control_exchange=alerta
+api_endpoint = /
+api_host = monitoring
+api_port = 80
 
-# The RabbitMQ broker address where a single node is used
-# (string value)
-#rabbit_host=localhost
+mongo_collection = alerts
+mongo_db = monitoring
+mongo_host = localhost
+mongo_port = 27017
 
-# The RabbitMQ broker port where a single node is used
-# (integer value)
-#rabbit_port=5672
+stomp_host = localhost
+stomp_port = 61613
 
-# RabbitMQ HA cluster host:port pairs (list value)
-#rabbit_hosts=$rabbit_host:$rabbit_port
+inbound_queue = /queue/alerts
+outbound_queue = /queue/logger
+outbound_topic = /topic/notify
 
-# connect over SSL for RabbitMQ (boolean value)
-#rabbit_use_ssl=false
+parser_dir = /opt/alerta/bin/parsers
 
-# the RabbitMQ userid (string value)
-#rabbit_userid=guest
-
-# the RabbitMQ password (string value)
-#rabbit_password=guest
-
-# the RabbitMQ virtual host (string value)
-#rabbit_virtual_host=/
-
-# how frequently to retry connecting with RabbitMQ (integer
-# value)
-#rabbit_retry_interval=1
-
-# how long to backoff for between retries when connecting to
-# RabbitMQ (integer value)
-#rabbit_retry_backoff=2
-
-# maximum retries with trying to connect to RabbitMQ (the
-# default of 0 implies an infinite retry count) (integer
-# value)
-#rabbit_max_retries=0
-
-# use durable queues in RabbitMQ (boolean value)
-#rabbit_durable_queues=false
-
-# use H/A queues in RabbitMQ (x-ha-policy: all).You need to
-# wipe RabbitMQ database when changing this option. (boolean
-# value)
-#rabbit_ha_queues=false
-
-
-# List of directories to load parser definitions from (separated by ',').
-# TODO(nsatterl): not supported yet
-parsers_path=/opt/alerta/etc/conf.d,/usr/share/local/parsers
-
-# Enable logging to syslog
-# Default value is False
-use_syslog=False
-
-# Which syslog facility to use.
-# Valid values include auth, authpriv, syslog, user0, user1...
-# Default value is 'syslog'
-# TODO(nsatterl): not supported yet
-syslog_log_facility=syslog
-
-# Which messages to log.
-# INFO means log all usage
-# ERROR means only log unsuccessful attempts
-# TODO(nsatterl): not supported yet
-syslog_log_level=ERROR
-
-# Linux: /dev/log MacOS: /var/run/syslog
-# TODO(nsatterl): not supported yet
-syslog_address=/var/run/syslog
-
-[alerta]
-
-
-[alert-api]
-version=v2
-endpoint=http://127.0.0.1/alerta/api/%(version)s
+rabbit_host = localhost
+rabbit_password = guest
+rabbit_port = 5672
+rabbit_use_ssl = False
+rabbit_userid = guest
+rabbit_virtual_host = /
 
 [alert-syslog]
-
-
-[alert-logger]
+syslog_facility = local7
+syslog_tcp_port = 666
+syslog_udp_port = 514
