--- a/etc/alerta/alert-urlmon.yaml
+++ b/etc/alerta/alert-urlmon.yaml
@@ -1,21 +1,21 @@
 - resource: guardian-sport
   url: http://www.guardian.co.uk/sport
   search: sport
-  environment: PROD
-  service: R2
+  environment: [PROD]
+  service: [R2,Web]
 
 - resource: google-search
   url: http://www.google.co.uk/search?q=test
-  environment: TEST
-  service: Search
+  environment: [TEST]
+  service: [Google,Search]
 
 - resource: twitter-search
   url: https://twitter.com/#!/search/%23leveson
-  environment: TEST
-  service: Search
+  environment: [TEST]
+  service: [Twitter,Search]
 
 - resource: nytimes-todayspaper
   url: http://www.nytimes.com/pages/todayspaper/index.html
-  environment: TEST
-  service: Website
+  environment: [TEST]
+  service: [News,Web]
 
