change service and group for alerta errors

--- a/etc/alerta/alert-syslog.yaml
+++ b/etc/alerta/alert-syslog.yaml
@@ -25,7 +25,7 @@
 
 # Alerta = local7
 - priority: local7.*
-  service: [Monitoring]
-  group: Alerta
+  service: [Alerta]
+  group: Internal
   parser: AlertaParser
 
