improve malformed config file handling

--- a/etc/snmptrapd.conf
+++ b/etc/snmptrapd.conf
@@ -1,2 +1,2 @@
 authCommunity log,execute,net Guardian
-traphandle default /usr/bin/python /opt/alerta/bin/alert-snmptrap.py
+traphandle default /usr/bin/python alert-snmptrap
