--- a/etc/snmptrapd.conf
+++ b/etc/snmptrapd.conf
@@ -1,2 +1,2 @@
-authCommunity log,execute,net Guardian
-traphandle default /usr/bin/python alert-snmptrap
+authCommunity log,execute,net public
+traphandle default /usr/bin/python /usr/bin/alert-snmptrap
