--- a/etc/alerta/alert-urlmon.yaml
+++ b/etc/alerta/alert-urlmon.yaml
@@ -6,16 +6,16 @@
 
 - resource: google-search
   url: http://www.google.co.uk/search?q=test
-  environment: [TEST]
-  service: [Google,Search]
+  environment: [PROD]
+  service: [Google,Search,Web]
 
 - resource: twitter-search
   url: https://twitter.com/#!/search/%23leveson
-  environment: [TEST]
-  service: [Twitter,Search]
+  environment: [PROD]
+  service: [Twitter,Search,Web]
 
 - resource: nytimes-todayspaper
   url: http://www.nytimes.com/pages/todayspaper/index.html
-  environment: [TEST]
+  environment: [PROD]
   service: [News,Web]
 
