fix default apache config

--- a/contrib/apache/alerta.conf
+++ b/contrib/apache/alerta.conf
@@ -1,7 +1,7 @@
 <VirtualHost *:80>
 
-    ServerName monitoring.gutc.gnl
-    ServerAlias monitoring.guprod.gnl
+    ServerName monitoring.gudev.gnl
+    #ServerAlias monitoring.guprod.gnl
     ServerAdmin webmon@guardian.co.uk
 
     ErrorLog /var/log/alerta/alerta-api-error.log
