--- a/etc/alerta/alerta.conf
+++ b/etc/alerta/alerta.conf
@@ -6,5 +6,13 @@ api_port = 80
 forward_duplicate = True
 
 [alert-syslog]
+user_id = root ; must be root to bind to ports 514/udp, 514/tcp
 use_syslog = False ; otherwise circular dependency
+
+[alert-aws]
+; fog_file = /path/to/fog/file ; if different to /etc/fog/alerta.conf
+
+[alert-ircbot]
+irc_user = alerta-dev
+irc_channel = #alerts-dev
 
