move console v2 assets around

--- a/contrib/apache/alerta.conf
+++ b/contrib/apache/alerta.conf
@@ -7,7 +7,7 @@
     ErrorLog /var/log/alerta/alerta-api-error.log
     CustomLog /var/log/alerta/alerta-api-access.log common
 
-    Alias /alerta/dashboard/ /var/www/html/alerta/dashboard/
+    Alias /alerta/dashboard/v2/assets/ /var/www/html/alerta/dashboard/v2/assets/
 
     #WSGIDaemonProcess alerta user=user1 group=group1 threads=5
     WSGIScriptAlias / /var/www/html/alerta/alerta.wsgi
