modify alert-pinger to use dedup module and increase threads

--- a/etc/alerta/alerta.conf
+++ b/etc/alerta/alerta.conf
@@ -16,3 +16,6 @@ use_syslog = False ; otherwise circular dependency
 irc_user = alerta-dev
 irc_channel = #alerts-dev
 
+[alert-pinger]
+server_threads = 50
+
