--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ python:
 # command to install dependencies
 install: "pip install -r requirements.txt --use-mirrors"
 # command to run tests
-script: nosetests
+script: nosetests tests/test_alert.py tests/test_status.py
