--- a/contrib/debian/control
+++ b/contrib/debian/control
@@ -4,27 +4,26 @@ Section: python
 Priority: optional
 Build-Depends: python-setuptools (>= 0.6b3), debhelper (>= 7), python-support (>= 0.8.4)
 Standards-Version: 3.8.4
-XS-Python-Version: current
+XS-Python-Version: >= 2.6
 
 Package: alerta
 Architecture: all
 Depends: ${misc:Depends}, ${python:Depends}
-XB-Python-Version: >= 2.6
 Provides: ${python:Provides}
 Description: Alerta monitoring framework
 
 Package: alerta-server
 Architecture: all
-Depends: python-argparse, python-tz, alerta-common, python-flask, python-yaml, python-boto, python-pymongo, python-suds, apache2, mongodb, rabbitmq-server, logrotate
+Depends: alerta-common, python-flask, python-boto, python-pymongo, python-suds, apache2, mongodb, rabbitmq-server, logrotate
 # missing: stomppy, python-dynect
 Description: Alerta monitoring framework
 
 Package: alerta-client
 Architecture: all
-Depends: python-argparse, python-tz, python-yaml, alerta-common
+Depends: alerta-common
 Description: Alerta monitoring framework
 
 Package: alerta-common
 Architecture: all
-Depends: alerta
+Depends: python-argparse, python-tz, python-yaml, alerta
 Description: Alerta monitoring framework
