add default alerta.conf for debian packaging

--- a/etc/alerta/alerta.conf
+++ b/etc/alerta/alerta.conf
@@ -1,21 +1,17 @@
 [DEFAULT]
-api_host = localhost
-api_port = 80
 
-[alerta]
-forward_duplicate = True
+; aliased API endpoint
+api_host = monitoring.guprod.gnm
 
-[alert-syslog]
-user_id = root ; must be root to bind to ports 514/udp, 514/tcp
-use_syslog = False ; otherwise circular dependency
+; metric destinations
+statsd_host = graphite.guprod.gnm
+carbon_host = graphite.guprod.gnm
+gmetric_host = ganglia.guprod.gnm
 
-[alert-aws]
-; fog_file = /path/to/fog/file ; if different to /etc/fog/alerta.conf
+; log errors to syslog not local log file
+use_syslog = yes
+log_file = /dev/null
 
-[alert-ircbot]
-irc_user = alerta-dev
-irc_channel = #alerts-dev
-
-[alert-pinger]
-server_threads = 50
-
+[alert-query]
+color = yes
+; timezone = Australia/Sydney
