--- a/contrib/examples/irssi.config
+++ b/contrib/examples/irssi.config
@@ -2,7 +2,8 @@ hilights = (
   { text = "Critical";       fullword = "yes"; color = "%r"; line = "no";  nick = "no";  word = "yes"; }
   { text = "Major";          fullword = "yes"; color = "%m"; line = "no";  nick = "no";  word = "yes"; }
   { text = "Minor";          fullword = "yes"; color = "%y"; line = "no";  nick = "no";  word = "yes"; }
-  { text = "Warning";        fullword = "yes"; color = "%b"; line = "no";  nick = "no";  word = "yes"; }
+  { text = "Warning";        fullword = "yes"; color = "%c"; line = "no";  nick = "no";  word = "yes"; }
   { text = "Normal";         fullword = "yes"; color = "%g"; line = "no";  nick = "no";  word = "yes"; }
   { text = "Informational";  fullword = "yes"; color = "%g"; line = "no";  nick = "no";  word = "yes"; }
+  { text = "Debug";          fullword = "yes"; color = "%k"; line = "no";  nick = "no";  word = "yes"; }
 );
