update wsgi file for alerta api

--- a/contrib/apache/httpd-alerta-api.conf
+++ b/contrib/apache/httpd-alerta-api.conf
@@ -1,11 +1,19 @@
+Listen 8080
+
 <VirtualHost *:8080>
 
-    ServerName api.alerta.local
+    ServerName localhost
 
-    # WSGIDaemonProcess alerta user=alerta group=alerta threads=5
-    WSGIScriptAlias /       /Library/WebServer/Documents/alerta/alerta-api.wsgi
+    WSGIDaemonProcess alerta user=alerta group=apache threads=50
+    WSGIScriptAlias / /var/www/html/alerta/alerta-api.wsgi
 
-    ErrorLog /var/log/apache2/alerta-api-error.log
-    CustomLog /var/log/apache2/alerta-api-access.log common
+    ErrorLog /var/log/alerta/alerta-api-error.log
+    CustomLog /var/log/alerta/alerta-api-access.log common
 
+    <Directory /var/www/alerta>
+        WSGIProcessGroup alerta
+        WSGIApplicationGroup %{GLOBAL}
+        Order deny,allow
+        Allow from all
+    </Directory>
 </VirtualHost>
