fix wsgi group for alerta api

--- a/contrib/apache/httpd-alerta-api.conf
+++ b/contrib/apache/httpd-alerta-api.conf
@@ -4,7 +4,7 @@ Listen 8080
 
     ServerName localhost
 
-    WSGIDaemonProcess alerta user=alerta group=apache threads=50
+    WSGIDaemonProcess alerta user=alerta group=www-data threads=50
     WSGIScriptAlias / /var/www/html/alerta/alerta-api.wsgi
 
     ErrorLog /var/log/alerta/alerta-api-error.log
