add dashboard assets to manifest

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
 recursive-include alerta/api/v2/templates *
 recursive-include alerta/dashboard/v2/templates *
+recursive-include alerta/dashboard/v2/assets *
 
 exclude .gitignore
 
