Fix debian package dependency
To just get the client tools:
$ sudo apt-get install alerta-client

To get everything, client and server:
$ sudo apt-get install alerta

--- a/contrib/debian/control
+++ b/contrib/debian/control
@@ -8,7 +8,7 @@ XS-Python-Version: >= 2.6
 
 Package: alerta
 Architecture: all
-Depends: ${misc:Depends}, ${python:Depends}
+Depends: ${misc:Depends}, ${python:Depends}, alerta-server, alerta-client
 Provides: ${python:Provides}
 Description: Alerta monitoring framework
 
@@ -25,5 +25,5 @@ Description: Alerta monitoring framework
 
 Package: alerta-common
 Architecture: all
-Depends: python-support, python-argparse, python-tz, python-yaml, alerta
+Depends: python-support, python-argparse, python-tz, python-yaml
 Description: Alerta monitoring framework
