--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-recursive-include alerta/api/v2/templates *
+recursive-include alerta/app/templates *
 recursive-include alerta/dashboard/v2/templates *
 recursive-include alerta/dashboard/v2/assets *
 
