--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,8 @@
+exclude .gitignore
+global-exclude *.pyc
+include alerta/app/app.wsgi
+include alerta/dashboard/v2/dashboard.wsgi
 recursive-include alerta/app/templates *
 recursive-include alerta/dashboard/v2/templates *
 recursive-include alerta/dashboard/v2/assets *
 
-exclude .gitignore
-
-global-exclude *.pyc
