--- a/etc/snmptrapd.conf
+++ b/etc/snmptrapd.conf
@@ -1,2 +1,3 @@
 authCommunity log,execute,net public
-traphandle default /usr/bin/python /usr/bin/alert-snmptrap
+format execute $a %a\n$A %A\n$s %s\n$b %b\n$B %B\n$x %#y-%#02m-%#02l\n$X %#02.2h:%#02.2j:%#02.2k\n$N %N\n$q %q\n$P %P\n$t %t\n$T %T\n$w %w\n$W %W\n%V~\%~%v\n
+traphandle default alert-snmptrap
