--- a/etc/httpd-alerta-dashboard.conf
+++ b/etc/httpd-alerta-dashboard.conf
@@ -2,11 +2,13 @@
 
     ServerName localhost
 
-    WSGIDaemonProcess alerta user=alerta group=alerta threads=50
+    WSGIDaemonProcess alerta-dashboard user=alerta group=alerta threads=50
     WSGIScriptAlias / /opt/alerta/lib/python2.6/site-packages/alerta/dashboard/dashboard.wsgi
 
     ErrorLog /var/log/alerta-dashboard-error.log
     CustomLog /var/log/alerta-dashboard-access.log common
+
+    Alias /alerta/dashboard/v2/assets/ /opt/alerta/lib/python2.6/site-packages/alerta/dashboard/v2/assets/
 
     <Directory /opt/alerta>
         WSGIProcessGroup alerta
@@ -15,3 +17,4 @@
         Allow from all
     </Directory>
 </VirtualHost>
+
