dont restrict apache vhost to localhost

--- a/etc/httpd-alerta-dashboard.conf
+++ b/etc/httpd-alerta-dashboard.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
 
-    ServerName localhost
+    #ServerName localhost
 
     WSGIDaemonProcess alerta-dashboard user=alerta group=alerta threads=50
     WSGIScriptAlias / /opt/alerta/lib/python2.6/site-packages/alerta/dashboard/dashboard.wsgi
