--- a/etc/httpd-alerta.conf
+++ b/etc/httpd-alerta.conf
@@ -2,7 +2,7 @@ Listen 8080
 
 <VirtualHost *:8080>
 
-    ServerName localhost
+    #ServerName localhost
 
     WSGIDaemonProcess alerta user=alerta group=alerta threads=50
     WSGIScriptAlias / /opt/alerta/lib/python2.6/site-packages/alerta/app/app.wsgi
