change wsgi path

--- a/etc/httpd-alerta-dashboard.conf
+++ b/etc/httpd-alerta-dashboard.conf
@@ -5,7 +5,7 @@ WSGISocketPrefix run/wsgi
     #ServerName localhost
 
     WSGIDaemonProcess alerta-dashboard user=alerta group=alerta threads=50
-    WSGIScriptAlias / /opt/alerta/lib/python2.6/site-packages/alerta/dashboard/dashboard.wsgi
+    WSGIScriptAlias / /opt/alerta/apache/dashboard.wsgi
 
     ErrorLog /var/log/alerta-dashboard-error.log
     CustomLog /var/log/alerta-dashboard-access.log common
