--- a/etc/httpd-alerta.conf
+++ b/etc/httpd-alerta.conf
@@ -6,7 +6,7 @@ WSGISocketPrefix /var/run/wsgi
     #ServerName localhost
 
     WSGIDaemonProcess alerta user=alerta group=alerta threads=50
-    WSGIScriptAlias / /opt/alerta/lib/python2.6/site-packages/alerta/app/app.wsgi
+    WSGIScriptAlias / /opt/alerta/apache/app.wsgi
 
     ErrorLog /var/log/alerta-error.log
     CustomLog /var/log/alerta-access.log common
