fix dashboard assets alias

--- a/etc/httpd-alerta-dashboard.conf
+++ b/etc/httpd-alerta-dashboard.conf
@@ -10,7 +10,7 @@ WSGISocketPrefix /run/wsgi
     ErrorLog /var/log/alerta-dashboard-error.log
     CustomLog /var/log/alerta-dashboard-access.log common
 
-    Alias /alerta/dashboard/v2/assets/ /opt/alerta/lib/python2.6/site-packages/alerta/dashboard/v2/assets/
+    Alias /alerta/assets/ /opt/alerta/lib/python2.6/site-packages/alerta/dashboard/v2/assets/
 
     <Directory /opt/alerta>
         WSGIProcessGroup alerta
