chdir not supported in old upstart versions

--- a/etc/init/alert-mailer.conf
+++ b/etc/init/alert-mailer.conf
@@ -4,7 +4,6 @@ start on runlevel [2345]
 stop on runlevel [06]
 
 setuid alerta
-chdir /var/lib/alerta
 respawn
 
 script
@@ -12,6 +11,7 @@ script
   [ -f /etc/default/alerta ] && . /etc/default/alerta
   if [ "$ENABLE_ALERTA" = "yes" ]
   then
+      cd /var/lib/alerta
       exec /opt/alerta/bin/alert-mailer -f
   fi
 end script
