--- a/etc/init/alert-pinger.conf
+++ b/etc/init/alert-pinger.conf
@@ -3,8 +3,6 @@
 start on runlevel [2345]
 stop on runlevel [06]
 
-chdir /var/lib/alerta
-
 respawn
 
 script
@@ -12,6 +10,7 @@ script
   [ -f /etc/default/alerta ] && . /etc/default/alerta
   if [ "$ENABLE_ALERTA" = "yes" ]
   then
+      cd /var/lib/alerta
       exec /opt/alerta/bin/alert-pinger -f
   fi
 end script
