add chdir back to upstart

--- a/contrib/upstart/alert-syslog.conf
+++ b/contrib/upstart/alert-syslog.conf
@@ -3,6 +3,7 @@
 start on runlevel [2345]
 stop on runlevel [06]
 
+chdir /var/lib/alerta
 respawn
 
 script
@@ -10,7 +11,6 @@ script
   [ -f /etc/default/alerta ] && . /etc/default/alerta
   if [ "$ENABLE_ALERTA" = "yes" ]
   then
-      cd /var/lib/alerta
       exec /opt/alerta/bin/alert-syslog -f
   fi
 end script
