--- a/contrib/upstart/alert-pagerduty.conf
+++ b/contrib/upstart/alert-pagerduty.conf
@@ -3,6 +3,7 @@
 start on runlevel [2345]
 stop on runlevel [06]
 
+chdir /var/lib/alerta
 setuid alerta
 respawn
 
@@ -11,7 +12,6 @@ script
   [ -f /etc/default/alerta ] && . /etc/default/alerta
   if [ "$ENABLE_ALERTA" = "yes" ]
   then
-      cd /var/lib/alerta
       exec /opt/alerta/bin/alert-pagerduty -f
   fi
 end script
