log wsgi to httpd log dir

--- a/etc/httpd-alerta.conf
+++ b/etc/httpd-alerta.conf
@@ -8,8 +8,8 @@ WSGISocketPrefix /var/run/wsgi
     WSGIDaemonProcess alerta user=alerta group=alerta threads=50
     WSGIScriptAlias / /opt/alerta/apache/app.wsgi
 
-    ErrorLog /var/log/alerta-error.log
-    CustomLog /var/log/alerta-access.log common
+    ErrorLog /var/log/httpd/alerta-error.log
+    CustomLog /var/log/httpd/alerta-access.log common
 
     <Directory /opt/alerta>
         WSGIProcessGroup alerta
