add redirect for console home

--- a/etc/httpd-alerta-dashboard.conf
+++ b/etc/httpd-alerta-dashboard.conf
@@ -3,6 +3,7 @@ WSGISocketPrefix /run/wsgi
 <VirtualHost *:80>
 
     #ServerName localhost
+    RedirectMatch permanent ^/$ /dashboard/index.html
 
     WSGIDaemonProcess alerta-dashboard user=alerta group=alerta threads=50
     WSGIScriptAlias / /opt/alerta/apache/dashboard.wsgi
@@ -19,4 +20,3 @@ WSGISocketPrefix /run/wsgi
         Allow from all
     </Directory>
 </VirtualHost>
-
