better dashboard redirect

--- a/etc/httpd-alerta-dashboard.conf
+++ b/etc/httpd-alerta-dashboard.conf
@@ -3,7 +3,8 @@ WSGISocketPrefix /run/wsgi
 <VirtualHost *:80>
 
     #ServerName localhost
-    RedirectMatch permanent ^/$ /dashboard/index.html
+    RedirectMatch permanent ^/$ /dashboard/
+    RedirectMatch permanent ^/dashboard/?$ /dashboard/index.html
 
     WSGIDaemonProcess alerta-dashboard user=alerta group=alerta threads=50
     WSGIScriptAlias / /opt/alerta/apache/dashboard.wsgi
