remove references to config api_host, api_port, api_root

--- a/etc/alerta/alerta.conf
+++ b/etc/alerta/alerta.conf
@@ -1,7 +1,5 @@
 [DEFAULT]
-
-; aliased API endpoint
-api_host = monitoring.guprod.gnm
+endpoint = http://api.alerta.io
 
 ; metric destinations
 statsd_host = graphite.guprod.gnm
@@ -12,6 +10,5 @@ gmetric_host = ganglia.guprod.gnm
 use_syslog = yes
 log_file = /dev/null
 
-[alert-query]
 color = yes
 ; timezone = Australia/Sydney
