use same number of processes as threads

--- a/etc/httpd-alerta.conf
+++ b/etc/httpd-alerta.conf
@@ -5,7 +5,7 @@ WSGISocketPrefix /var/run/wsgi
 
     #ServerName localhost
 
-    WSGIDaemonProcess alerta user=alerta group=alerta threads=50
+    WSGIDaemonProcess alerta user=alerta group=alerta processes=5 threads=5
     WSGIScriptAlias / /opt/alerta/apache/app.wsgi
 
     ErrorLog /var/log/httpd/alerta-error.log
